<resources>
    <string name="app_name">LPD Grupa 10</string>
    <string name="register">Reģistrēties</string>
    <string name="login">Pieteikties</string>
    <string name="password">Parole</string>
    <string name="username">Lietotājvārds</string>
    <string name="name">Vārds</string>
    <string name="settings">Iestatījumi</string>
    <string name="inventory">Inventorija</string>
    <string name="placeholder">Sveicināti savā izvēlnē!</string>
    <string name="back">Atpakaļ</string>
    <string name="inventoryall">Visa inventorija</string>
    <string name="inventoryavailable">Pieejamā Inventorija</string>
    <string name="inventoryreserved">Rezervētā inventorija</string>
    <string name="makereservation">Rezervēt aprīkojumu</string>
    <string name="action_settings">SOME STRING</string>
    <string name="itemID">Lietas ID nr:</string>
    <string name="itemName">Lietas nosaukums: ***</string>
    <string name="itemAmount">Daudzums: </string>
    <string name="itemPlace">Lietas atrašanas vieta: ***</string>
    <string name="save">Saglabāt</string>
    <string name="reserve">Rezervēt</string>
    <string name="RegEditAdvice">*** : tikai ievadot jaunu lietu sistēmā!</string>
    <string name="userID">Lietotāja ID</string>
    <string name="change">Rediģēt</string>
    <string name="UserEditAdvice">Aizpildīt tikai maināmās sadaļas!</string>
</resources>
