<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a10ers.lpd_mobeng10.UserSettings"
    android:background="@drawable/lpd10_bcground"
    android:backgroundTint="#9FFFFFFF"
    android:backgroundTintMode="src_over"
    >

    <EditText
        android:id="@+id/etUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/userID"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/etChangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintLeft_toLeftOf="@+id/etUserID"
        app:layout_constraintTop_toBottomOf="@+id/etUserID"

        />

    <EditText
        android:id="@+id/etChangeUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        app:layout_constraintLeft_toLeftOf="@+id/etChangeName"
        app:layout_constraintTop_toBottomOf="@+id/etChangeName"

        />


    <EditText
        android:id="@+id/etChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="@+id/etChangeUsername"
        app:layout_constraintTop_toBottomOf="@+id/etChangeUsername"
        />


    <TextView
        android:id="@+id/tvUserEditPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserEditAdvice"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/etChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/etChangePassword"
        />

    <Button
        android:id="@+id/bRegisterChange"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:text="@string/change"
        android:textColor="@android:color/white"
        android:background="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@+id/tvUserEditPrompt"
        app:layout_constraintTop_toBottomOf="@+id/tvUserEditPrompt"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/bBacktoMenu3"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="@+id/bRegisterChange"
        app:layout_constraintTop_toBottomOf="@+id/bRegisterChange"
        android:layout_marginTop="10dp"
         />

</android.support.constraint.ConstraintLayout>
