<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a10ers.lpd_mobeng10.MainActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="parent"
        />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/bLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/bLogin"
        app:layout_constraintVertical_bias="0.365"
        android:layout_marginStart="125dp"
        />

</android.support.constraint.ConstraintLayout>
