<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a10ers.lpd_mobeng10.RegisterActivity">

    <EditText
        android:id="@+id/etRegName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/etRegUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="59dp"
        app:layout_constraintLeft_toLeftOf="@id/etRegName"
        app:layout_constraintTop_toBottomOf="@id/etRegName"

        />


    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="105dp"
        app:layout_constraintLeft_toLeftOf="@id/etRegUsername"
        app:layout_constraintTop_toBottomOf="@id/etRegUsername"
        />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/etRegPassword"
        app:layout_constraintTop_toBottomOf="@id/etRegPassword"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" />
</android.support.constraint.ConstraintLayout>
