<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="a10ers.lpd_mobeng10.UserMain"
    android:background="@drawable/lpd10_bcground"
    android:backgroundTint="#9FFFFFFF"
    android:backgroundTintMode="src_over"
    >

    <!--TODO: wants constraint on TextView-->

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:hint="@string/placeholder"
        android:textSize="24sp"
        android:textAlignment="center"
        android:typeface="sans"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="parent"
        />

    <Button
        android:id="@+id/bInventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintLeft_toLeftOf="@+id/tvWelcome"
        android:textColor="@android:color/white"
        android:background="?attr/colorPrimary"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="@+id/bInventory"
        app:layout_constraintTop_toBottomOf="@+id/bInventory"
        app:layout_constraintRight_toRightOf="@id/bInventory"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/bBacktoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@+id/bSettings"
        app:layout_constraintLeft_toLeftOf="@+id/bSettings"
        app:layout_constraintRight_toRightOf="@id/bSettings"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/white"
        android:background="?attr/colorPrimary"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/bBacktoLogin"
        app:layout_constraintTop_toBottomOf="@+id/bBacktoLogin"
        android:layout_marginTop="20dp"
        />


</android.support.constraint.ConstraintLayout>
